JVM flags for FJ